--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-remark-embed-video": "^3.2.1",
+    "gatsby-remark-embed-youtube": "^0.0.7",
+    "gatsby-remark-responsive-iframe": "^6.14.0",
     "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
